--- a/BookingSystem/Views/Shared/_Layout.cshtml
+++ b/BookingSystem/Views/Shared/_Layout.cshtml
@@ -26,8 +26,16 @@
                     <button type="button" class="menu-toggle"><i class="fa fa-bars"></i></button>
                     <ul class="menu">
                         <li class="menu-item @(ViewBag?.IsHome != null ? "current-menu-item" : "")"><a href="/Home/Index">Головна</a></li>
-                        <li class="menu-item @(ViewBag?.IsSignIn != null ? "current-menu-item" : "")"><a href="/Home/SignIn">Увійти</a></li>
-	                    <li class="menu-item @(ViewBag?.IsSignOut != null ? "current-menu-item" : "")"><a href="/Home/SignOut">Реєстрація</a></li>
+                        @if (Session["User"] == null)
+                        {
+                            <li class="menu-item @(ViewBag?.IsSignIn != null ? "current-menu-item" : "")"><a href="/Home/SignIn">Увійти</a></li>
+                            <li class="menu-item @(ViewBag?.IsSignOut != null ? "current-menu-item" : "")"><a href="/Home/SignOut">Реєстрація</a></li>
+                        }
+                        else
+                        {
+	                        <li class="menu-item @(ViewBag?.IsProfile != null ? "current-menu-item" : "")"><a href="/Home/Profile">Профіль</a></li>
+	                        <li class="menu-item"><a href="/Home/Exit">Вихід</a></li>
+                        }
                     </ul> <!-- .menu -->
                 </div> <!-- .main-navigation -->
 
