--- a/BookingSystem/Views/Shared/_Layout.cshtml
+++ b/BookingSystem/Views/Shared/_Layout.cshtml
@@ -87,7 +87,7 @@
                     </div>
                 </div> <!-- .row -->
 
-                <div class="colophon">© 2020 Poltavec Olya. Всі права захищено.</div>
+                <div class="colophon">© 2020 Poltavets Olha. Всі права захищено.</div>
             </div> <!-- .container -->
 
         </footer>
