--- a/BookingSystem/Content/Site.css
+++ b/BookingSystem/Content/Site.css
@@ -1892,6 +1892,7 @@ ul.arrow {
 
     #branding .logo, #branding .logo-copy {
         display: inline-block;
+	    margin-bottom: 20px;
     }
 
     #branding .logo {
