--- a/BookingSystem/Views/Home/SignOut.cshtml
+++ b/BookingSystem/Views/Home/SignOut.cshtml
@@ -31,7 +31,7 @@
 					<input type="password" class="form-control" required="" name="password" id="password" placeholder="">
 				</div>
 				<div class="form-group">
-					<label for="password2">Повторій пароль</label>
+					<label for="password2">Повторіть пароль</label>
 					<input type="password" class="form-control" required="" name="password2" id="password2" placeholder="">
 				</div>
 				<button type="submit" class="btn btn-primary">Реєстрація</button>
